2006-06-10  Florian Boor  <florian@kernelconcepts.de>
	
	* Makefile.am: Copy debian files in order to build a package.
	* Release version 0.7

2006-04-21  Jan Arne Petersen <jpetersen@jpetersen.org>

	Add support for some specific hildon widgets.
	* configure.ac: add hildon-lgpl and hildon-libs to DEP_MODULES
	* ui.c (color_changed), (set_widget_color_str), (category_dialog): Use
	HildonColorButton and HildonCaption.

	Fixed some Bugs.
	* db.c (gpe_pim_category_new): Use g_malloc0 to clear colour field.
	* ui.c (palette_color), (select_color), (do_update_category),
	(category_dialog): Use g_object_set_data_full with g_free as
	GDestroyNotify for the 'col' data.
	* ui.c (do_update_category), (category_dialog): Use 'path' instead of
	id to identify the currently edited category to fix the edit new
	categories bug (and some others).
	* ui.c (gpe_pim_categories_dialog): Remove unneeded LS_DUMMY column.
	* ui.c (categories_dialog_ok): Fix new category color bug.
	* ui.c (gpe_pim_categories_dialog): Fix data for new_category
	callback.

2006-04-20  Florian Boor  <florian@kernelconcepts.de>

	* Minor documentation fixes.
	
2006-04-18  Florian Boor  <florian@kernelconcepts.de>

    * ui.c: Activate buttons only if category selected.
      Change box packaging to fit on qvga screens.

2006-04-17  Florian Boor  <florian@kernelconcepts.de>

    * ui.c: Category editing, minor GtkObject -> GObject conversion.
      Rename (do_new_category) to (do_update_category), make this function
      able to update existing categories.
      Rename (new_category) to (category_dialog) and take parameter depending
      on what the desired action is.
      (new_category), (modify_category): New functions calling (category_dialog)
      Implement colour palette functions and preview widget.
    * db.c: minor improvements and replacing of free() with g_free();  

2006-04-16  Florian Boor  <florian@kernelconcepts.de>

    * db.c (check_table_update): Fix typo causing data loss.