@@ -1,3 +1,10 @@
+2006-07-31  Florian Boor  <florian@kernelconcepts.de>
+
+    * db.c (gpe_pim_category_new), (load_one): Fix memory allocation bug.
+      Use more glib types.
+    * autogen.sh: Create po/ChangeLog autotools insists to have.
+    * po/Makefile.in.in: removed
+
 2006-06-10  Florian Boor  <florian@kernelconcepts.de>
 	
 	* Makefile.am: Copy debian files in order to build a package.
